fixed border radius contrast

--- a/public/style.css
+++ b/public/style.css
@@ -318,7 +318,7 @@ flex > *, .grid > *{
     border-radius: 100%;
 }
 .border-radius-2{
-    border-radius: 50px;
+    border-radius: 20px;
 }
 .clip-path{
     clip-path: polygon(20% 0%, 100% 25%, 80% 100%, 0% 100%, 20% 25%);
